--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="index.html"><img src="img/popcorn.svg" alt="LOGO" class="logo" /></a>
 
       <form action="#" class="search">
-        <input type="text" class="search__input" placeholder="Enter the Movie Title" />
+        <input type="text" class="search__input" placeholder="Enter the Movie or Series Title" />
         <button class="search__button">
           <svg class="search__icon">
             <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
